--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@ body {
     background: #F8F8F8;
     font-family: 'Open Sans', sans-serif;
 }
+
+.intro {
+    height: 100vh;
+    width: 100vw;
+    background-color: #212121;
+}
